<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name">Bubble</string>
    <string name="reset">Reset</string>
    <string name="not_supported">Orientation not supported</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrate_info">press MENU to calibrate...</string>
    <string name="calibrate_title">Calibrate your phone</string>
    <string name="calibrate_message">Put any side (including the back) of your Android device on a flat horizontal surface and press the Calibrate button.\n\nOr reset the calibration for all the phone sides.</string>
    <string name="calibrate_again_title">You must re-calibrate</string>
    <string name="calibrate_again_message">The sensor change requires re-calibration of the phone.</string>
    <string name="calibrate_saved">Custom calibration saved !</string>
    <string name="calibrate_failed">Calibration failed !</string>
    <string name="calibrate_restored">Original calibration restored !</string>
    <string name="preferences">Settings</string>
    <string name="preference_show_angle">Show numeric angle</string>
    <string name="preference_show_angle_summary">Display angle value(s) on screen</string>
    <string name="preference_display_type">Display type</string>
    <string name="preference_sound">Sound effects</string>
    <string name="preference_sound_summary">Play sound when level</string>
    <string name="preference_lock">Locking</string>
    <string name="preference_lock_summary">Allow level orientation locking</string>
    <string name="preference_viscosity">Viscosity</string>
    <string name="preference_economy">Eco mode</string>
    <string name="preference_economy_summary">Less smooth animations\nbut preserves the battery life</string>
    <string name="angle">Angle</string>
    <string name="lock_info">tap to lock level orientation</string>
    <string name="inclination">Inclination</string>
    <string name="roof_pitch">Roof pitch</string>
    <string name="roof_pitch_summary">Inches of rise per foot of run\n3 &#126; 14°</string>
    <string name="angle_summary">Angle in degrees</string>
    <string name="inclination_summary">Inclination in percents\n100&#37; &#126; 45°</string>
    <string name="viscosity_low">Low</string>
    <string name="viscosity_medium">Medium</string>
    <string name="viscosity_high">High</string>
    <string name="viscosity_low_summary">Low viscosity\nBubble moves faster</string>
    <string name="viscosity_medium_summary">Medium viscosity\nBubble moves normaly</string>
    <string name="viscosity_high_summary">High viscosity\nBubble moves slowly</string>
    <string name="config_switch_vertically">Invert vertically</string>
    <string name="config_switch_horizontally">Invert horizontally</string>
    <string name="config_rotate_axis">Rotate axis</string>
    <string name="orientation">Orientation</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="orientation_sensor">Orientation sensor</string>
    <string name="accelerometer_sensor">Accelerometer sensor</string>
    <string name="orientation_summary">Orientation sensor\nSensitivity depends on the phone</string>
    <string name="accelerometer_summary">Accelerometer sensor\nAccurate but sensitive to moves</string>
</resources>
